@@ -3,11 +3,11 @@
  *
  * v1.0 originally written by Gregory Demar
  *
- * @copyright  Copyright (c) 2003-2018 Coppermine Dev Team
+ * @copyright  Copyright (c) 2003-2019 Coppermine Dev Team
  * @license    GNU General Public License version 3 or later; see LICENSE
  *
  * js/util.js
- * @since  1.6.06
+ * @since  1.6.07
  */
 
 function init_utils () {
@@ -48,9 +48,11 @@ var processTool = function (totl, formd) {
 				formd.errs = data.errs;
 				processTool(totl, formd);
 			} else if (data.err) {
+				$('#toolpdsp').hide();
 				$('#backtool').show();
 			} else {
-				showProgress(1,1);
+				$('#toolpdsp').hide();
+//				showProgress(1,1);
 				$('#backtool').show();
 			}
 			if (data.msg) {
